# granoflow-cli

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  granoflow-local-http-api.openapi.yaml  rustfmt.toml
.github/workflows/: quality.yml
scripts/: package.sh  quality.sh  setup-hooks.sh
scripts/git-hooks/: pre-push
src/: anki.rs  backup.rs  cli.rs  client.rs  commands.rs  config.rs  deck_package.rs  errors.rs  help_catalog.rs  lib.rs  main.rs  openapi_drift.rs  output.rs
tests/: cli_contract.rs
