[package]
name = "granoflow"
version = "0.1.0"
edition = "2021"
description = "Granoflow Local HTTP API client CLI"
license = "MIT"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
directories = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
wiremock = "0.6"
