[package]
name = "granoflow"
version = "0.1.0"
edition = "2021"
description = "Granoflow Local HTTP API client CLI"
license = "MIT"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"

[dependencies]
anyhow = "1"
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
directories = "5"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
wiremock = "0.6"
